# sway.module_core

./: .clang-format  .clang-tidy  .codecov.yml  .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile-ARM64  Jenkinsfile  README-CMake.md  README.md  gcc-linux-multiarch.dockerfile  gcc-linux-xarch.Dockerfile  gcc-linux-xarch.README.md  gcc-linux-xarch.hcl  gcc-wasm.Dockerfile  gcc-wasm.README.md  index.html  post-build.sh
cmake_modules/: add_submodule.cmake  create_library.cmake  detect_library_extension.cmake  enable_coverage.cmake  enable_cxx17.cmake  options.cmake  project_metadata.cmake  set_compile_definitions.cmake  set_output_dir.cmake
cmake_modules/emscripten/: compiler.cmake
cmake_modules/emscripten/compiler_flags/: set_exports.cmake
cmake_modules/modules/: create_interface.cmake  create_object.cmake  create_object_library.cmake  logger.cmake
cmake_modules/modules/compiler/clang/: create_library.cmake
cmake_modules/modules/compiler/emscripten/: create_bitcode.cmake  create_library.cmake  gen_target_name.cmake  set_compilation.cmake  set_environment.cmake  set_modularize.cmake  set_optimization.cmake  setup.cmake
cmakehelpers/: create_library.cmake  custom_add_subdirectory.cmake  custom_enable_cxx17.cmake  enable_coverage.cmake  options.cmake  project_metadata.cmake  set_output_dir.cmake
cmakehelpers/emscripten/: compiler.cmake  setup.cmake
cmakehelpers/emscripten/compiler_flags/: set_async.cmake  set_config.cmake  set_environment.cmake  set_exports.cmake  set_modularize.cmake  set_optimization.cmake  set_pthread.cmake
cmakehelpers/modules/compiler/clang/: create_library.cmake
cmakehelpers/modules/compiler/emscripten/: create_bitcode.cmake  create_library.cmake  gen_target_name.cmake  set_modularize.cmake
docs/: generate.sh  glob-options.README.md
docs/doxygen/: doxyfile.doxy
docs/doxygen/pages/: mainpage.dox
docs/knowledge-base/main/module/: cpp_namespace.md  doxygen_group.md
docs/moxygen/templates/cpp/: class.md  index.md  namespace.md  page.md
doxygen_resources/: doxyfile.doxy
include/sway/: _index.ts  core.h  core.hpp  core.ts  defines.h  defines.hpp  exceptions.h  keywords.hpp  namespacemacros.h  namespacemacros.hpp  optional.hpp  types.h  types.hpp  visibilitymacros.h  visibilitymacros.hpp
include/sway/core/: exception.h  plugin.h  plugin.hpp  plugininfo.h  plugininfo.hpp  version.h  version.hpp  version.inl
include/sway/core/binding/: function.h  function.hpp  function.inl  procaddress.h  procaddress.hpp
include/sway/core/container/: hierarchy.hpp  hierarchy.ts  node.hpp  node.ts  nodeidx.hpp  nodeidx.ts
include/sway/core/containers/: hierarchy.h  hierarchy.hpp  hierarchy.inl  hierarchylistener.h  hierarchynode.h  hierarchynode.inl  hierarchynodeidx.h  (+15 more)
lib/: exports.json  runtime_exports.json
lib/cpp/src/: _embinds.cpp  version.cpp
lib/cxx/: CMakeLists.txt
lib/cxx/src/: _embinds.cpp  plugin.cpp  version.cpp
lib/cxx/tests/google/: CMakeLists.txt  README.md  atomicidgenmanager.spec.cpp  clock.spec.cpp  dictionary.spec.cpp  duration.spec.cpp  enum.spec.cpp  event.spec.cpp  eventbus.spec.cpp  format.spec.cpp  function.spec.cpp  hierarchy.spec.cpp  node.spec.cpp  nodeidx.spec.cpp  path.spec.cpp  rawtype.spec.cpp  subsystem.spec.cpp  version.spec.cpp
lib/include/sway/: core.hpp  defines.hpp  emscriptenmacros.hpp  keywords.hpp  namespacemacros.hpp  optional.hpp  types.hpp  visibilitymacros.hpp
lib/src/: _embinds.cpp  optional.cpp  plugin.cpp  version.cpp
lib/src/container/: hierarchy.cpp  node.cpp  nodeidx.cpp
lib/src/foundation/: context.cpp  event.cpp  eventable.cpp  eventdata.cpp  eventhandler.cpp  object.cpp  objectclassmetadata.cpp  uniqueable.cpp
lib/src/misc/: optional.cpp
lib/tests/google/: CMakeLists.txt  enum.spec.cpp  event.spec.cpp  hierarchy.spec.cpp  node.spec.cpp  nodeidx.spec.cpp  rawtype.spec.cpp  version.spec.cpp
lib/web/: package-lock.json  package.json
lib/web/src/: bridge.ts  bridgemodule.ts  core.ts
lib/web/tests/: README.md
scripts/: libmodule_core-symbols.sh  post-build.sh  pre-build.sh
scripts/jenkins/: base.groovy  docker-container.groovy  docker-image.groovy
scripts/jenkins/docker/: container.groovy  entity.groovy  image.groovy  imagemanager.groovy  imagename.groovy
scripts/jenkins/vars/: container.groovy  image.groovy  imagemanager.groovy
src/: _embinds.cpp  plugin.cpp  version.cpp
src/container/: _embinds.cpp  hierarchy.cpp  node.cpp  node.spec.m  nodeidx.cpp  nodeidx.spec.m  nodeidx.spec.ts
src/containers/: hierarchy.cpp  hierarchynode.cpp  hierarchynodeidx.cpp  node.cpp  nodeidx.cpp  tree.cpp  treenodebase.cpp
src/foundation/: context.cpp  eventable.cpp  eventhandler.cpp  object.cpp
src/generic/: filesource.cpp
src/generic/io/: filesource.cpp  path.cpp
src/utilities/: observable.cpp
src/utils/: observable.cpp
sway.module_core.xcodeproj/: project.pbxproj
tests/: CMakeLists.txt  enum.spec.cpp  format.spec.cpp  foundation.spec.cpp  function.spec.cpp  hierarchy.spec.cpp  path.spec.cpp  rawtype.spec.cpp  version.spec.cpp
tests/boost/: CMakeLists.txt  enum.spec.cpp  format.spec.cpp  foundation.spec.cpp  function.spec.cpp  path.spec.cpp  rawtype.spec.cpp  version.spec.cpp
tests/google/: CMakeLists.txt  enum.spec.cpp  format.spec.cpp  function.spec.cpp  hierarchy.spec.cpp  node.spec.cpp  nodeidx.spec.cpp  path.spec.cpp  rawtype.spec.cpp  version.spec.cpp
tests/jest/: package-lock.json  package.json
tests/jest/src/: bridge.spec.ts  bridge.ts  bridgemodule.ts  hierarchy.spec.ts  index.spec.ts  node.spec.ts  nodeidx.spec.ts
tsapi/: .eslintrc  jest.config.ts  package-lock.json  package.json  tsconfig.json
tsapi/src/: bridge.ts  bridgemodule.ts  core.ts  hierarchy.p.ts  hierarchy.ts  node.p.ts  node.ts  nodeidx.p.ts  nodeidx.ts
tsapi/src/foundation/: hierarchy.p.ts  node.p.ts  nodeidx.p.ts
tsapi/src/misc/: list.ts  optional.ts
tsapi/tests/jest/: bridge.ts  hierarchy.spec.ts  node.spec.ts  nodeidx.spec.ts  uniqueable.spec.ts
tsapi/tests/jest-embind/: hierarchy.spec.ts  node.spec.ts  nodeidx.spec.ts  uniqueable.spec.ts
(+265 files in other folders)
